feat: home logo

--- a/src/assets/scss/layouts/Layout.scss
+++ b/src/assets/scss/layouts/Layout.scss
@@ -28,6 +28,12 @@
         &-icon {
             display: none;
         }
+
+        &-logo {
+            width: 3rem;
+            height: 100%;
+            margin-left: 1rem;
+        }
         
 
         &-nav {
@@ -67,10 +73,6 @@
                     }
                 }
             }
-        }
-
-        &-title-container {
-            text-decoration: none;
         }
 
         &-title {
