--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<div>
+<app-layout></app-layout>
+<div class="main-content">
+  <router-outlet></router-outlet> <!-- Dynamic content will be rendered here -->
 </div>
