feat: not yet available page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,1 @@
-<app-layout></app-layout>
-<div class="main-content">
-  <router-outlet></router-outlet> <!-- Dynamic content will be rendered here -->
-</div>
+<app-layout class="flex flex-col min-h-screen" ></app-layout>
