--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,4 +1,6 @@
-<header class="bg-gradient-to-r from-gray-700 via-gray-900 to-black text-white p-4 shadow-md">
+<header
+  class="bg-gradient-to-r from-gray-700 via-gray-900 to-black text-white p-4 shadow-md"
+>
   <div class="container mx-auto flex justify-between items-center">
     <h1 class="text-xl font-bold">VCG Recordz</h1>
     <nav>
@@ -9,12 +11,16 @@
   </div>
 </header>
 
-<main class="container mx-auto my-8 p-6 bg-white rounded-lg shadow-lg">
+<main
+  class="flex-grow container mx-auto my-8 p-6 bg-white rounded-lg flex items-center justify-center"
+>
   <router-outlet></router-outlet>
 </main>
 
-<footer class="bg-gradient-to-r from-black via-gray-900 to-gray-700 text-white p-4">
+<footer
+  class="mt-auto bg-gradient-to-r from-black via-gray-900 to-gray-700 text-white p-4"
+>
   <div class="container mx-auto text-center">
-    <p class="text-sm">&copy; 2024 VCG Recordz</p>
+    <p class="text-sm">&copy; 2024 VCG Recordz ©</p>
   </div>
 </footer>
