--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900">
+<nav class="border-gray-200 dark:bg-gray-900">
   <div
     class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
   >
@@ -84,7 +84,7 @@
         </li>
         <li>
           <a
-            routerLink="/"
+            routerLink="/contact"
             class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
             >Contact</a
           >
@@ -95,7 +95,7 @@
 </nav>
 
 <main
-  class="bg-gray-900 flex-grow py-8 p-6 flex items-center justify-center w-full"
+  class="bg-gray-900 flex-grow py-8 flex items-center justify-center w-full"
 >
   <router-outlet></router-outlet>
 </main>
