feat: navbar active blue

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -58,13 +58,12 @@
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:mx-0">
       <h2 class="text-5xl font-semibold tracking-tight text-white sm:text-7xl">
-        Work with us
+        Work with us !
       </h2>
       <p
         class="mt-8 text-pretty text-lg font-medium text-gray-300 sm:text-xl/8"
       >
-        Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem
-        cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat.
+      We distribute beatmakers' beats, release singles and albums, and provide professional recording and voice mixing services. Our team is dedicated to ensuring your music reaches its full potential, offering support every step of the way from creation to distribution.
       </p>
     </div>
     <div class="mx-auto mt-10 max-w-2xl lg:mx-0 lg:max-w-none">
@@ -81,21 +80,21 @@
         class="mt-16 grid grid-cols-1 gap-8 sm:mt-20 sm:grid-cols-2 lg:grid-cols-4"
       >
         <div class="flex flex-col-reverse gap-1">
-          <dt class="text-base/7 text-gray-300">Offices worldwide</dt>
+          <dt class="text-base/7 text-gray-300">Songs recorded</dt>
+          <dd class="text-4xl font-semibold tracking-tight text-white">160+</dd>
+        </div>
+        <div class="flex flex-col-reverse gap-1">
+          <dt class="text-base/7 text-gray-300">Projects Distributed</dt>
+          <dd class="text-4xl font-semibold tracking-tight text-white">35</dd>
+        </div>
+        <div class="flex flex-col-reverse gap-1">
+          <dt class="text-base/7 text-gray-300">Collaborations</dt>
           <dd class="text-4xl font-semibold tracking-tight text-white">12</dd>
         </div>
         <div class="flex flex-col-reverse gap-1">
-          <dt class="text-base/7 text-gray-300">Full-time colleagues</dt>
-          <dd class="text-4xl font-semibold tracking-tight text-white">300+</dd>
-        </div>
-        <div class="flex flex-col-reverse gap-1">
-          <dt class="text-base/7 text-gray-300">Hours per week</dt>
-          <dd class="text-4xl font-semibold tracking-tight text-white">40</dd>
-        </div>
-        <div class="flex flex-col-reverse gap-1">
-          <dt class="text-base/7 text-gray-300">Paid time off</dt>
+          <dt class="text-base/7 text-gray-300">Seniority</dt>
           <dd class="text-4xl font-semibold tracking-tight text-white">
-            Unlimited
+            1 year
           </dd>
         </div>
       </dl>
