--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -11,6 +11,7 @@
       <button
         type="button"
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        routerLink="/getintouch"
       >
         Get in touch
       </button>
@@ -29,7 +30,7 @@
           fill="none"
           viewBox="0 0 17 14"
         >
-          <path
+          <path 
             stroke="currentColor"
             stroke-linecap="round"
             stroke-linejoin="round"
@@ -49,14 +50,17 @@
         <li>
           <a
             routerLink="/"
-            class="block py-2 px-3 md:p-0 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:dark:text-blue-500"
-            aria-current="page"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
             >Home</a
           >
         </li>
         <li>
           <a
             routerLink="/about"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
             class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
             >About</a
           >
@@ -64,6 +68,8 @@
         <li>
           <a
             routerLink="/team"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
             class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
             >Team</a
           >
@@ -71,6 +77,8 @@
         <li>
           <a
             routerLink="/artists"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
             class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
             >Artists</a
           >
@@ -78,6 +86,8 @@
         <li>
           <a
             routerLink="/services"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
             class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
             >Services</a
           >
@@ -85,6 +95,8 @@
         <li>
           <a
             routerLink="/contact"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
             class="block py-2 px-3 md:p-0 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
             >Contact</a
           >
@@ -103,25 +115,17 @@
 <footer class="dark:bg-gray-900">
   <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
     <div class="sm:flex sm:items-center sm:justify-between">
-      <a
-        href="https://flowbite.com/"
-        class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse"
-      >
-        <img
-          src="https://flowbite.com/docs/images/logo.svg"
-          class="h-8"
-          alt="Flowbite Logo"
-        />
+
+
         <span
           class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-          >Flowbite</span
+          >VCG Recordz</span
         >
-      </a>
       <ul
         class="flex flex-wrap items-center mb-6 text-sm font-medium text-gray-500 sm:mb-0 dark:text-gray-400"
       >
         <li>
-          <a href="#" class="hover:underline me-4 md:me-6">About</a>
+          <a routerLink="/about" class="hover:underline me-4 md:me-6">About</a>
         </li>
         <li>
           <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
@@ -130,7 +134,7 @@
           <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
         </li>
         <li>
-          <a href="#" class="hover:underline">Contact</a>
+          <a routerLink="/contact" class="hover:underline">Contact</a>
         </li>
       </ul>
     </div>
