feat: team members page

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -72,8 +72,8 @@
       >
         <a routerLink="/artists">Discover Artists <span aria-hidden="true">&rarr;</span></a>
         <a routerLink="/getintouch">Meet our Team <span aria-hidden="true">&rarr;</span></a>
-        <a routerLink="/">Our services <span aria-hidden="true">&rarr;</span></a>
-        <a routerLink="/">Discover Beatmakers <span aria-hidden="true">&rarr;</span></a
+        <a routerLink="/services">Our services <span aria-hidden="true">&rarr;</span></a>
+        <a routerLink="/team">Discover Beatmakers <span aria-hidden="true">&rarr;</span></a
         >
       </div>
       <dl
