--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -1,1 +1,118 @@
-<p>team works!</p>
+<div class="mb-16">
+  <!-- Code block starts -->
+  <div class="container flex justify-center mx-auto pt-16">
+    <div class="flex justify-center items-center flex-col w-full">
+      <p class="text-gray-300 text-4xl text-center font-normal font-bold pb-3">
+        VCG TEAM
+      </p>
+      <h1
+        class="xl:text-4xl text-3xl text-center text-white font-extrabold pb-6 sm:w-4/6 w-full mx-20 sm:mx-10"
+      >
+        Three friends became brothers, then partners.
+      </h1>
+    </div>
+  </div>
+  <div class="w-full bg-gray-900 px-10 pt-10">
+    <div class="container mx-auto">
+      <div
+        role="list"
+        aria-label="Behind the scenes People "
+        class="lg:flex md:flex sm:flex items-center xl:justify-between flex-wrap md:justify-around sm:justify-around lg:justify-around"
+      >
+        <div
+          role="listitem"
+          class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-32 sm:mb-24 xl:max-w-sm lg:w-2/5"
+        >
+          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300">
+            <div class="absolute -mt-20 w-full flex justify-center">
+              <div class="h-52 w-52">
+                <img
+                  src="https://cdn.tuk.dev/assets/photo-1564061170517-d3907caa96ea.jfif"
+                  alt="Display Picture of Kitsui"
+                  role="img"
+                  class="rounded-full object-cover h-full w-full shadow-md"
+                />
+              </div>
+            </div>
+            <div class="px-6 mt-16">
+              <h1 class="font-bold text-3xl text-center mb-1 mt-32 text-gray-900">Kitsui</h1>
+              <p class="text-gray-900text-sm text-center">
+                Chief Executive Officer
+              </p>
+              <p class="text-center text-gray-900 text-base pt-3 font-normal">
+                The CEO's role in raising a company's corporate IQ is to
+                establish an atmosphere that promotes knowledge sharing and
+                collaboration.
+              </p>
+              <div class="w-full flex justify-center pt-5 pb-5">
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          role="listitem"
+          class="xl:w-1/3 lg:mx-3 sm:w-3/4 md:w-2/5 relative mt-16 mb-32 sm:mb-24 xl:max-w-sm lg:w-2/5"
+        >
+          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300">
+            <div class="absolute -mt-20 w-full flex justify-center">
+              <div class="h-52 w-52">
+                <img
+                  src="/biggy.png"
+                  alt="Display Picture of Biggy"
+                  role="img"
+                  class="rounded-full object-cover h-full w-full shadow-md"
+                />
+              </div>
+            </div>
+            <div class="px-6 mt-16">
+              <h1 class="font-bold text-3xl text-center mb-1 mt-32 text-gray-900">Biggy</h1>
+              <p class="text-gray-900text-sm text-center">
+                Product Design Head
+              </p>
+              <p class="text-center text-gray-900 text-base pt-3 font-normal">
+                The emphasis on innovation and technology in our companies has
+                resulted in a few of them establishing global benchmarks in
+                product design and development.
+              </p>
+              <div class="w-full flex justify-center pt-5 pb-5">
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          role="listitem"
+          class="xl:w-1/3 sm:w-3/4 md:w-2/5 relative mt-16 mb-32 sm:mb-24 xl:max-w-sm lg:w-2/5"
+        >
+          <div class="rounded-3xl overflow-hidden shadow-md bg-gray-300">
+            <div class="absolute -mt-20 w-full flex justify-center">
+              <div class="h-52 w-52">
+                <img
+                  src="https://cdn.tuk.dev/assets/photo-1566753323558-f4e0952af115.jfif"
+                  alt="Display Picture of Køni"
+                  role="img"
+                  class="rounded-full object-cover h-full w-full shadow-md"
+                />
+              </div>
+            </div>
+            <div class="px-6 mt-16">
+              <h1 class="font-bold text-3xl text-center mb-1 mt-32 text-gray-900">Køni</h1>
+              <p class="text-gray-900text-sm text-center">
+                Manager Development
+              </p>
+              <p class="text-center text-gray-900 text-base pt-3 font-normal">
+                Our services encompass the assessment and repair of property
+                damage caused by water, fire, smoke, or mold. We can also be a
+                part of the restoration.
+              </p>
+              <div class="w-full flex justify-center pt-5 pb-5">
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
