feat: team beatmakers

--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -1,15 +1,18 @@
+<link
+  rel="stylesheet"
+  href="https://cdn.materialdesignicons.com/6.5.95/css/materialdesignicons.min.css"
+/>
+
 <div class="mb-16">
   <!-- Code block starts -->
   <div class="container flex justify-center mx-auto pt-16">
     <div class="flex justify-center items-center flex-col w-full">
-      <p class="text-gray-300 text-4xl text-center font-normal font-bold pb-3">
-        VCG TEAM
-      </p>
-      <h1
-        class="xl:text-4xl text-3xl text-center text-white font-extrabold pb-6 sm:w-4/6 w-full mx-20 sm:mx-10"
+      <h1 class="text-white text-4xl font-bold mb-2">VCG Team</h1>
+      <h2
+        class="text-xl text-center text-white font-extrabold pb-6 sm:w-4/6 w-full mx-20 sm:mx-10"
       >
         Three friends became brothers, then partners.
-      </h1>
+      </h2>
     </div>
   </div>
   <div class="w-full bg-gray-900 px-10 pt-10">
@@ -35,7 +38,11 @@
               </div>
             </div>
             <div class="px-6 mt-16">
-              <h1 class="font-bold text-3xl text-center mb-1 mt-32 text-gray-900">Kitsui</h1>
+              <h1
+                class="font-bold text-3xl text-center mb-1 mt-32 text-gray-900"
+              >
+                Kitsui
+              </h1>
               <p class="text-gray-900text-sm text-center">
                 Chief Executive Officer
               </p>
@@ -44,9 +51,7 @@
                 establish an atmosphere that promotes knowledge sharing and
                 collaboration.
               </p>
-              <div class="w-full flex justify-center pt-5 pb-5">
-
-              </div>
+              <div class="w-full flex justify-center pt-5 pb-5"></div>
             </div>
           </div>
         </div>
@@ -66,7 +71,11 @@
               </div>
             </div>
             <div class="px-6 mt-16">
-              <h1 class="font-bold text-3xl text-center mb-1 mt-32 text-gray-900">Biggy</h1>
+              <h1
+                class="font-bold text-3xl text-center mb-1 mt-32 text-gray-900"
+              >
+                Biggy
+              </h1>
               <p class="text-gray-900text-sm text-center">
                 Product Design Head
               </p>
@@ -75,9 +84,7 @@
                 resulted in a few of them establishing global benchmarks in
                 product design and development.
               </p>
-              <div class="w-full flex justify-center pt-5 pb-5">
-
-              </div>
+              <div class="w-full flex justify-center pt-5 pb-5"></div>
             </div>
           </div>
         </div>
@@ -97,7 +104,11 @@
               </div>
             </div>
             <div class="px-6 mt-16">
-              <h1 class="font-bold text-3xl text-center mb-1 mt-32 text-gray-900">Køni</h1>
+              <h1
+                class="font-bold text-3xl text-center mb-1 mt-32 text-gray-900"
+              >
+                Køni
+              </h1>
               <p class="text-gray-900text-sm text-center">
                 Manager Development
               </p>
@@ -106,10 +117,121 @@
                 damage caused by water, fire, smoke, or mold. We can also be a
                 part of the restoration.
               </p>
-              <div class="w-full flex justify-center pt-5 pb-5">
+              <div class="w-full flex justify-center pt-5 pb-5"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
+<!-- Page Container -->
+<div class="flex items-center justify-center bg-gray-900">
+  <div class="flex flex-col">
+    <div class="flex flex-col">
+      <!-- Our Beatmakers -->
+      <div class="container max-w-7xl px-4">
+        <!-- Section Header -->
+        <div class="flex flex-wrap justify-center text-center">
+          <div class="flex justify-center items-center flex-col w-full">
+            <!-- Header -->
+            <h1 class="text-white text-4xl font-bold mb-2">VCG Production</h1>
+            <h2
+              class="text-xl text-center text-white font-extrabold pb-6 sm:w-4/6 w-full mx-20 sm:mx-10"
+            >
+              Our beatmakers
+            </h2>
+          </div>
+        </div>
+
+        <!-- Team Members -->
+        <div class="flex flex-wrap justify-center">
+          <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
+            <div class="flex flex-col">
+              <!-- Avatar -->
+              <a href="#" class="mx-auto">
+                <img
+                  class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
+                  src="https://images.unsplash.com/photo-1634926878768-2a5b3c42f139?fit=clamp&w=400&h=400&q=80"
+                />
+              </a>
+
+              <!-- Details -->
+              <div class="text-center mt-6">
+                <!-- Name -->
+                <h1 class="text-white text-xl font-bold mb-1">Oddgyes</h1>
+
+                <!-- Social Icons -->
+                <div
+                  class="flex items-center justify-center opacity-50 hover:opacity-100 transition-opacity duration-300"
+                >
+                  <!-- Instagram -->
+                  <a
+                    href="#"
+                    class="flex rounded-full hover:bg-orange-50 h-10 w-10"
+                  >
+                    <i
+                      class="mdi mdi-instagram text-orange-400 mx-auto mt-2"
+                    ></i>
+                  </a>
+                </div>
               </div>
             </div>
+          </div>
+
+          <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
+            <div class="flex flex-col">
+              <!-- Avatar -->
+              <a href="#" class="mx-auto">
+                <img
+                  class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
+                  src="https://images.unsplash.com/photo-1634896941598-b6b500a502a7?fit=clamp&w=400&h=400&q=80"
+                />
+              </a>
+
+              <!-- Details -->
+              <div class="text-center mt-6">
+                <!-- Name -->
+                <h1 class="text-white text-xl font-bold mb-1">Shidozz</h1>
+
+                <!-- Social Icons -->
+                <div
+                  class="flex items-center justify-center opacity-50 hover:opacity-100 transition-opacity duration-300"
+                >
+                  <!-- Instagram -->
+                  <a
+                    href="#"
+                    class="flex rounded-full hover:bg-orange-50 h-10 w-10"
+                  >
+                    <i
+                      class="mdi mdi-instagram text-orange-400 mx-auto mt-2"
+                    ></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex flex-wrap justify-center text-center">
+          <div class="flex justify-center items-center flex-col w-full">
+            <!-- Header -->
+            <h2
+              class="text-xl text-center text-white font-extrabold pb-6 sm:w-4/6 w-full mx-20 sm:mx-10"
+            >
+              Discover our beats
+            </h2>
+          </div>
+        </div>
+        <div class="flex flex-wrap justify-center text-center">
+          <div class="flex justify-center items-center flex-col w-full">
+            <!-- Header -->
+            <h2
+              class="text-xl text-center text-white font-extrabold pb-6 sm:w-4/6 w-full mx-20 sm:mx-10"
+            >
+              Purchase your beats now!
+            </h2>
           </div>
         </div>
       </div>
