feat: contact blocks description

--- a/src/app/components/pages/contact/contact.component.html
+++ b/src/app/components/pages/contact/contact.component.html
@@ -50,8 +50,7 @@
           </h5>
         </div>
         <p class="font-normal text-gray-700 dark:text-gray-400">
-          Here are the biggest enterprise technology acquisitions of 2021 so
-          far, in reverse chronological order.
+          We share the progress of the Team and the latest news on our Instagram &#64;vcg.recordz
         </p>
       </a>
     </div>
@@ -85,8 +84,7 @@
           </h5>
         </div>
         <p class="font-normal text-gray-700 dark:text-gray-400">
-          Here are the biggest enterprise technology acquisitions of 2021 so
-          far, in reverse chronological order.
+          Find the best beats by our beatmakers for your next project.
         </p>
       </a>
     </div>
@@ -115,8 +113,7 @@
           </h5>
         </div>
         <p class="font-normal text-gray-700 dark:text-gray-400">
-          Here are the biggest enterprise technology acquisitions of 2021 so
-          far, in reverse chronological order.
+          Listen to the latest beats from our beatmakers on our YouTube channel "VCG Production".
         </p>
       </a>
     </div>
