feat: vcg production blocks + links

--- a/src/app/components/pages/contact/contact.component.html
+++ b/src/app/components/pages/contact/contact.component.html
@@ -27,7 +27,9 @@
   <div class="grid grid-cols-1 gap-4 mt-10">
     <div>
       <a
-        href="#"
+        href="https://www.instagram.com/vcg.recordz/"
+        target="_blank"
+        rel="noopener noreferrer"
         class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
       >
         <div class="flex items-center">
@@ -56,7 +58,9 @@
     </div>
     <div>
       <a
-        href="#"
+        href="https://www.beatstars.com/vcgproduction"
+        target="_blank"
+        rel="noopener noreferrer"
         class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
       >
         <div class="flex items-center">
@@ -74,7 +78,7 @@
             <polygon
               style="fill: #ea0000"
               points="26.934,1.318 35.256,18.182 53.867,20.887 40.4,34.013 43.579,52.549 26.934,43.798 
-	10.288,52.549 13.467,34.013 0,20.887 18.611,18.182 "
+	            10.288,52.549 13.467,34.013 0,20.887 18.611,18.182 "
             />
           </svg>
           <h5
@@ -90,7 +94,9 @@
     </div>
     <div>
       <a
-        href="#"
+        href="https://www.youtube.com/@VCGProduction"
+        target="_blank"
+        rel="noopener noreferrer"
         class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
       >
         <div class="flex items-center">
