--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -216,7 +216,6 @@
 
         <div class="flex flex-wrap justify-center text-center">
           <div class="flex justify-center items-center flex-col w-full">
-            <!-- Header -->
             <h2
               class="text-xl text-center text-white font-extrabold pb-6 sm:w-4/6 w-full mx-20 sm:mx-10"
             >
@@ -224,15 +223,82 @@
             </h2>
           </div>
         </div>
+        <div class="flex justify-center">
+          <a
+            href="https://www.youtube.com/@VCGProduction"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+          >
+            <div class="flex items-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="#ff0000"
+                class="mr-2 bi bi-youtube"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"
+                />
+              </svg>
+              <h5
+                class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white my-2"
+              >
+                Discover beats on YouTube
+              </h5>
+            </div>
+            <p class="font-normal text-gray-700 dark:text-gray-400">
+              Listen to the latest beats from our beatmakers on our YouTube
+              channel "VCG Production".
+            </p>
+          </a>
+        </div>
         <div class="flex flex-wrap justify-center text-center">
           <div class="flex justify-center items-center flex-col w-full">
-            <!-- Header -->
             <h2
-              class="text-xl text-center text-white font-extrabold pb-6 sm:w-4/6 w-full mx-20 sm:mx-10"
+              class="text-xl text-center text-white font-extrabold pb-6 sm:w-4/6 w-full mx-20 sm:mx-10 mt-10"
             >
               Purchase your beats now!
             </h2>
           </div>
+        </div>
+        <div class="flex justify-center">
+          <a
+            href="https://www.beatstars.com/vcgproduction"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700"
+          >
+            <div class="flex items-center">
+              <svg
+                height="16"
+                width="16"
+                version="1.1"
+                id="Capa_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 0 53.867 53.867"
+                class="mr-2"
+                xml:space="preserve"
+              >
+                <polygon
+                  style="fill: #ea0000"
+                  points="26.934,1.318 35.256,18.182 53.867,20.887 40.4,34.013 43.579,52.549 26.934,43.798 
+                  10.288,52.549 13.467,34.013 0,20.887 18.611,18.182 "
+                />
+              </svg>
+              <h5
+                class="text-2xl font-bold tracking-tight text-gray-900 dark:text-white my-2"
+              >
+                Purchase beats on Beatstars
+              </h5>
+            </div>
+            <p class="font-normal text-gray-700 dark:text-gray-400">
+              Find the best beats by our beatmakers for your next project.
+            </p>
+          </a>
         </div>
       </div>
     </div>
