feat: beatmakers instagram links

--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -150,12 +150,11 @@
           <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
             <div class="flex flex-col">
               <!-- Avatar -->
-              <a href="#" class="mx-auto">
+
                 <img
                   class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
                   src="https://images.unsplash.com/photo-1634926878768-2a5b3c42f139?fit=clamp&w=400&h=400&q=80"
                 />
-              </a>
 
               <!-- Details -->
               <div class="text-center mt-6">
@@ -168,11 +167,13 @@
                 >
                   <!-- Instagram -->
                   <a
-                    href="#"
-                    class="flex rounded-full hover:bg-orange-50 h-10 w-10"
+                    href="https://www.instagram.com/oddgyes/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="flex rounded-full hover:bg-orange-50 h-[53px] w-[53px] mb-3"
                   >
                     <i
-                      class="mdi mdi-instagram text-orange-400 mx-auto mt-2"
+                      class="mdi mdi-instagram text-orange-400 mx-auto mt-2 text-3xl"
                     ></i>
                   </a>
                 </div>
@@ -183,12 +184,10 @@
           <div class="w-full md:w-6/12 lg:w-3/12 mb-6 px-6 sm:px-6 lg:px-4">
             <div class="flex flex-col">
               <!-- Avatar -->
-              <a href="#" class="mx-auto">
                 <img
                   class="rounded-2xl drop-shadow-md hover:drop-shadow-xl transition-all duration-200 delay-100"
                   src="https://images.unsplash.com/photo-1634896941598-b6b500a502a7?fit=clamp&w=400&h=400&q=80"
                 />
-              </a>
 
               <!-- Details -->
               <div class="text-center mt-6">
@@ -201,11 +200,13 @@
                 >
                   <!-- Instagram -->
                   <a
-                    href="#"
-                    class="flex rounded-full hover:bg-orange-50 h-10 w-10"
+                    href="https://www.instagram.com/shidozzmusic_/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="flex rounded-full hover:bg-orange-50 h-[53px] w-[53px] mb-3"
                   >
                     <i
-                      class="mdi mdi-instagram text-orange-400 mx-auto mt-2"
+                      class="mdi mdi-instagram text-orange-400 mx-auto mt-2 text-3xl"
                     ></i>
                   </a>
                 </div>
@@ -214,7 +215,9 @@
           </div>
         </div>
 
-        <div class="flex flex-col sm:flex-row justify-between items-center h-96 sm:h-48">
+        <div
+          class="flex flex-col sm:flex-row justify-between items-center h-96 sm:h-48"
+        >
           <div class="mb-10 mx-3 h-full flex justify-center">
             <a
               href="https://www.youtube.com/@VCGProduction"
@@ -236,7 +239,7 @@
                   />
                 </svg>
                 <h5
-                 class="text-m sm900:text-2xl font-bold tracking-tight text-gray-900 dark:text-white my-2"
+                  class="text-m sm900:text-2xl font-bold tracking-tight text-gray-900 dark:text-white my-2"
                 >
                   Discover beats on YouTube
                 </h5>
