feat: vcg team members description

--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -44,12 +44,10 @@
                 Kitsui
               </h1>
               <p class="text-gray-900text-sm text-center">
-                Chief Executive Officer
+                VCG Partner
               </p>
               <p class="text-center text-gray-900 text-base pt-3 font-normal">
-                The CEO's role in raising a company's corporate IQ is to
-                establish an atmosphere that promotes knowledge sharing and
-                collaboration.
+                Ownership, Business Management, Accounting, Treasury Management, Music production, Mixing, Singing/Rapping, Client Relationship Management, Marketing and Web Development.
               </p>
               <div class="w-full flex justify-center pt-5 pb-5"></div>
             </div>
@@ -77,12 +75,10 @@
                 Biggy
               </h1>
               <p class="text-gray-900text-sm text-center">
-                Product Design Head
+                VCG Partner
               </p>
               <p class="text-center text-gray-900 text-base pt-3 font-normal">
-                The emphasis on innovation and technology in our companies has
-                resulted in a few of them establishing global benchmarks in
-                product design and development.
+                Ownership, Filming, Acting<br><span class="italic text-gray-300 text-sm">Biggy is the president but that's a secret, also he imitates crows during every night. If you're reading this it's either you're selecting it or you've got dark reader installed in your browser.</span>
               </p>
               <div class="w-full flex justify-center pt-5 pb-5"></div>
             </div>
@@ -110,12 +106,10 @@
                 Køni
               </h1>
               <p class="text-gray-900text-sm text-center">
-                Manager Development
+                VCG Partner
               </p>
               <p class="text-center text-gray-900 text-base pt-3 font-normal">
-                Our services encompass the assessment and repair of property
-                damage caused by water, fire, smoke, or mold. We can also be a
-                part of the restoration.
+                Ownership, Business Management, Mixing, Rapping, Client Relationship Management and Marketing.<br><span class="italic text-gray-300 text-base">Koni is the best rapper ever! And if you've read well you know who's writing these secret texts.</span>
               </p>
               <div class="w-full flex justify-center pt-5 pb-5"></div>
             </div>
