fix: biggy description punctuation

--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -78,7 +78,7 @@
                 VCG Partner
               </p>
               <p class="text-center text-gray-900 text-base pt-3 font-normal">
-                Ownership, Filming, Acting<br><span class="italic text-gray-300 text-sm">Biggy is the president but that's a secret, also he imitates crows during every night. If you're reading this it's either you're selecting it or you've got dark reader installed in your browser.</span>
+                Ownership, Filming and Acting.<br><span class="italic text-gray-300 text-sm">Biggy is the president but that's a secret, also he imitates crows during every night. If you're reading this it's either you're selecting it or you've got dark reader installed in your browser.</span>
               </p>
               <div class="w-full flex justify-center pt-5 pb-5"></div>
             </div>
