--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -47,7 +47,7 @@
                 VCG Partner
               </p>
               <p class="text-center text-gray-900 text-base pt-3 font-normal">
-                Ownership, Business Management, Accounting, Treasury Management, Music production, Mixing, Singing/Rapping, Client Relationship Management, Marketing and Web Development.
+                Ownership, Business Management, Accounting, Treasury Management, Music production, Mixing, Writing, Singing/Rapping, Client Relationship Management, Marketing and Web Development.
               </p>
               <div class="w-full flex justify-center pt-5 pb-5"></div>
             </div>
@@ -109,7 +109,7 @@
                 VCG Partner
               </p>
               <p class="text-center text-gray-900 text-base pt-3 font-normal">
-                Ownership, Business Management, Mixing, Rapping, Client Relationship Management and Marketing.<br><span class="italic text-gray-300 text-base">Koni is the best rapper ever! And if you've read well you know who's writing these secret texts.</span>
+                Ownership, Business Management, Mixing, Writing, Rapping, Client Relationship Management and Marketing.<br><span class="italic text-gray-300 text-base">Koni is the best rapper ever! And if you've read well you know who's writing these secret texts.</span>
               </p>
               <div class="w-full flex justify-center pt-5 pb-5"></div>
             </div>
