feat: vcg team pics

--- a/src/app/components/pages/team/team.component.html
+++ b/src/app/components/pages/team/team.component.html
@@ -30,7 +30,7 @@
             <div class="absolute -mt-20 w-full flex justify-center">
               <div class="h-52 w-52">
                 <img
-                  src="https://cdn.tuk.dev/assets/photo-1564061170517-d3907caa96ea.jfif"
+                  src="/kitsui.png"
                   alt="Display Picture of Kitsui"
                   role="img"
                   class="rounded-full object-cover h-full w-full shadow-md"
@@ -92,7 +92,7 @@
             <div class="absolute -mt-20 w-full flex justify-center">
               <div class="h-52 w-52">
                 <img
-                  src="https://cdn.tuk.dev/assets/photo-1566753323558-f4e0952af115.jfif"
+                  src="/koni.png"
                   alt="Display Picture of Køni"
                   role="img"
                   class="rounded-full object-cover h-full w-full shadow-md"
